# vidinspect-agent

./: .gitignore  README.md  pyproject.toml  数据质检规范汇总.md
config/: default.yaml
docs/: dataset_inputs.md  detector_dataset_impact.md  detectors.md
examples/: sample_report.json
src/vidinspect_agent/: __init__.py  __main__.py  agent.py  cli.py  lerobot.py  models.py  pipeline.py
src/vidinspect_agent/checkers/: __init__.py  _frames.py  _joints.py  _lerobot.py  _raft.py  _vision.py  base.py  brightness.py  colormatch.py  dup_frame.py  edge_grasp.py  endpoint_static.py  frame_consistency.py  freeze.py  gripper_offscreen.py  integrity.py  jump.py  metadata.py  noise.py  object_slip.py  occlusion.py  regrasp.py  static.py  tablecloth.py  tail_action.py  visual.py
tests/: test_agent.py  test_frame_consistency.py  test_lerobot.py  test_s3_optimizations.py  test_static_joint.py  test_tail_action.py
tests/fixtures/sample_group/: README.md
tests/fixtures/sample_group/labels/: labels.json
tests/fixtures/sample_group/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  stats.json  tasks.jsonl
