[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidinspect-agent"
version = "0.1.0"
description = "Automated video data quality inspection agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "houxianzhou" }]
keywords = ["video", "quality-control", "agent", "inspection"]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "torch>=2.0",
    "decord>=0.6",
    "easydict>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
vidinspect = "vidinspect_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
